[package]
name = "ito-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
postcard = { version = "1.0", features = ["alloc"] }
serde_bytes = "0.11"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
hex = "0.4.3"
